Switched to 4Server API

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="stylesheet" href="public/main.css" />
-  <link rel="stylesheet" href="public/animation.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="app.js" defer></script>
   <title>4 Words A Day</title>
@@ -17,8 +16,8 @@
     <p class="word"></p>
     <p class="figure"></p>
     <p class="definition"></p>
+    <p class="loader">Loading...</p>
   </main>
-  <p class="help"></p>
   <footer>
     <p class="word-count">1 of 4</p>
   </footer>
